# correcteur

./: Cargo.toml  README.md  python_lev.py
benches/: main.rs
src/: levenshtein.rs  lib.rs  main.rs
