[package]
name = "correcteur"
version = "0.2.0"
edition = "2024"
authors = ["Chaddaï Fouché <chaddai.fouche@gmail.com>"]

[lib]
name = "levenshtein"

[dependencies]
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
regex = "1.11.1"
ndarray = "0.16.1"
icu_normalizer = {version = "1.5.0", features = ["compiled_data"]}